# MusicPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  intmusic.cpp  intmusic.h  intmusic.pro  intmusic.ui  intmusic_ui.py  main.cpp  oh-package.json5  resources.qrc
AppScope/: app.json5
app/: CMakeLists.txt  intmusic.h
app/custom/CardButton/: cardbutton.cpp  cardbutton.h
app/custom/CardCombo/: cardcombo.cpp  cardcombo.h
app/custom/CardPathSelect/: cardpathselect.cpp  cardpathselect.h
app/custom/FlexibleTabWidget/: flexibletabwidget.cpp  flexibletabwidget.h
app/custom/MainSubTitle/: mainsubtitle.cpp  mainsubtitle.h
app/third/duckdb/: duckdb.hpp  duckdb.lib
app/util/Config/: configmanager.cpp  configmanager.h  musicdatastruct.cpp  musicdatastruct.h  musiclibrary.cpp  musiclibrary.h
app/util/Interface/: api.cpp  api.h  ialbum.h  icache.h  icharacter.h  igenre.h  ilang.h  iplaylist.h  isong.h  musicdatastruct.h  musiclibrary.cpp  musiclibrary.h
app/util/MusicDB/: musicscanner.cpp  musicscanner.h
app/util/MusicPlayer/: musicplayer.cpp  musicplayer.h  musicservice.cpp  musicservice.h
app/util/MusicScan/: musicscanner.cpp  musicscanner.h  musicscannerworker.cpp  musicscannerworker.h
app/util/PlayList/: playlist.cpp  playlist.h  playlistmanager.cpp  playlistmanager.h  smartplaylist.cpp  smartplaylist.h  standardplaylist.cpp  standardplaylist.h
app/view/: musiclistview.cpp  musiclistview.h
app/view/IntMusicIndexTab/: index.cpp  index.h  intmusicindextab.cpp  intmusicindextab.h  musiclist.cpp  musiclist.h  setting.cpp  setting.h
app/view/MiniPlayer/: miniplayer.cpp  miniplayer.h
app/view/MusicListView/: musiclistview.cpp  musiclistview.h
app/view/MusicScanView/: musicscanview.cpp  musicscanview.h
app/view/Setting/: settingcommon.cpp  settingcommon.h  settingconfig.cpp  settingconfig.h
entry/src/main/: module.json5
entry/src/main/ets/common/bean/: MusicItemData.ets  ShortCutItemData.ets  TabItemData.ets
entry/src/main/ets/common/constants/: BreakpointConstants.ets  CommonConstants.ets  ControlConstants.ets  PlayConstants.ets  StyleConstants.ets
entry/src/main/ets/common/utils/: BackgroundUtil.ets  BreakpointSystem.ets  Logger.ets  MediaService.ets  MediaTools.ets  SongItemBuilder.ets
entry/src/main/ets/components/: AlbumComponent.ets  AlbumCover.ets  ControlComponent.ets  LyricsComponent.ets  MusicInfoComponent.ets  PlayControlComponent.ets  PlayList.ets  PlayerMini.ets
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/pages/: DetailPage.ets  ListPage.ets  PlayPage.ets
entry/src/main/ets/view/: ListAreaComponent.ets  ListMusicItemComponent.ets  MineAreaComponent.ets  PlayControler.ets
entry/src/main/ets/viewmodel/: MusicListViewModel.ets  MusicPlayStateData.ets  PageViewModel.ets  PlayControlModel.ets  PlayData.ets
entry/src/main/resources/base/element/: color.json  float.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
resource/: rolecategories.txt
